--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <label for="texto-original">Digite um texto</label>
 
             <textarea id="texto-original"></textarea>
-            <span><img src="./public/Vector.png">Apenas letras! Evite caracteres especiais e acentos</span>
+            <span><img src="./public/Vector.png" alt="Atenção">Apenas letras! Evite caracteres especiais e
+                acentos</span>
             <div class="buttons">
                 <button type="button" id="criptografar">Criptografar</button>
                 <button type="button" id="descriptografar">Descriptografar</button>
